src/Styles/App.css
body {
  font-family: Arial, sans-serif;
  /* background-color: #f4f4f9; */
  background-image: url("../Assets/Images/space-background.jpg");
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
}

.App {
  text-align: center;
  background: #dadada;
  opacity: 90%;
  padding: 2rem;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  max-width: 400px;
}

h1 {
  font-size: 2rem;
  margin-bottom: 1.5rem;
  color: #1e1e1e;
}

.calculator {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

label {
  font-size: 1rem;
  color: #dadada;
}

.date-inputs {
  display: flex;
  gap: 0.5rem;
  justify-content: center;
}

.date-inputs input {
  padding: 0.5rem;
  font-size: 1rem;
  border: 1px solid #ccc;
  border-radius: 5px;
  width: 30%;
  text-align: center;
}

button {
  padding: 0.75rem;
  font-size: 1rem;
  background-color: #1e1e1e;
  /* background-color: #663399; */
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

button:hover {
  background-color: #101010;
}

.result {
  margin-top: 1.5rem;
  text-align: center;
  color: #1e1e1e;
}

.age {
  text-align: center;
  font-size: 1.2rem;
  font-family: "Boldonse", system-ui;
  font-weight: 400;
  font-style: normal;
}
.age strong {
  font-weight: 1000;
  color: #000000;
  font-style: italic;
}

/* Responsive Design */
@media (max-width: 480px) {
  .App {
    padding: 1rem;
  }

  h1 {
    font-size: 1.5rem;
  }

  input,
  button {
    font-size: 0.9rem;
  }

  .date-inputs input {
    width: 25%;
  }
}

